--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import 'tailwindcss';
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -15,11 +16,6 @@
 
 
 body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  place-items: center;
-  min-width: 300px;
   min-height: 100vh;
   max-height: 100vh;
 }
