--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: black;
+  background-color: #000000;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
